--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,63 +10,105 @@
         tools:context=".MainActivity">
 
     <Button
-            android:text="Loan"
-            android:layout_width="0dp"
+            android:text="Krishna"
+            android:layout_width="192dp"
             android:layout_height="wrap_content"
-            android:id="@+id/btnLoan" android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="96dp" android:layout_marginStart="96dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="96dp" android:layout_marginRight="96dp"
-            android:background="@android:color/holo_blue_light"/>
+            android:id="@+id/btnUser06"
+            android:background="@android:color/holo_blue_light"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnUser07" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
     <Button
-            android:text="Movie"
-            android:layout_width="0dp"
+            android:text="Rohit"
+            android:layout_width="192dp"
             android:layout_height="wrap_content"
-            android:id="@+id/btnMovie" android:layout_marginBottom="50dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnLoan" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="96dp" android:layout_marginStart="96dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="96dp" android:layout_marginRight="96dp"
-            app:layout_constraintHorizontal_bias="1.0" android:background="@android:color/holo_blue_light"/>
+            android:id="@+id/btnUser05"
+            android:background="@android:color/holo_blue_light"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnUser06" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
     <Button
-            android:text="Flight"
-            android:layout_width="0dp"
+            android:text="Sulaima"
+            android:layout_width="192dp"
             android:layout_height="wrap_content"
-            android:id="@+id/btnFlight" android:layout_marginBottom="50dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnMovie" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="96dp" android:layout_marginStart="96dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="96dp" android:layout_marginRight="96dp"
-            app:layout_constraintHorizontal_bias="1.0" tools:background="@android:color/holo_blue_light"
-            android:background="@android:color/holo_blue_light"/>
-    <TextView
-            android:text="Here offer goes!"
-            android:layout_width="wrap_content"
-            android:layout_height="34dp"
-            android:id="@+id/txtViewOffer" android:layout_marginBottom="75dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnFlight" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="96dp" android:layout_marginRight="96dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="96dp"
-            android:layout_marginStart="96dp" android:textSize="24sp"
-            android:textColor="@android:color/holo_green_light"/>
-    <EditText
-            android:layout_width="wrap_content"
+            android:id="@+id/btnUser04"
+            android:background="@android:color/holo_blue_light"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnUser05" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
+    <Button
+            android:text="Sula"
+            android:layout_width="192dp"
             android:layout_height="wrap_content"
-            android:inputType="text|textPersonName"
-            android:text="192.168.0.8"
-            android:ems="10"
-            android:id="@+id/txtIPAddress" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="96dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="96dp"
-            android:layout_marginStart="96dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="96dp" android:hint="IP Address"/>
-    <EditText
-            android:layout_width="wrap_content"
+            android:id="@+id/btnUser03"
+            android:background="@android:color/holo_blue_light"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnUser04"/>
+    <Button
+            android:text="Kimaya"
+            android:layout_width="192dp"
             android:layout_height="wrap_content"
-            android:inputType="text|textPersonName"
-            android:text="UserId"
-            android:ems="10"
-            android:id="@+id/txtUserId" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtIPAddress" android:layout_marginEnd="96dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="96dp"
-            android:layout_marginStart="96dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="96dp"/>
+            android:id="@+id/btnUser02"
+            android:background="@android:color/holo_blue_light"
+            app:layout_constraintBottom_toTopOf="@+id/btnUser03"
+            android:layout_marginBottom="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
+    <Button
+            android:text="Ramesh"
+            android:layout_width="192dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnUser01"
+            android:background="@android:color/holo_blue_light"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnUser02" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
+    <Button
+            android:text="Siddhi"
+            android:layout_width="192dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnUser07"
+            android:background="@android:color/holo_blue_light"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnUser08" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
+    <Button
+            android:text="Supaimama"
+            android:layout_width="192dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnUser10"
+            android:background="@android:color/holo_blue_light"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"/>
+    <Button
+            android:text="Ranjan"
+            android:layout_width="192dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnUser08"
+            android:background="@android:color/holo_blue_light"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnUser09" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
+    <Button
+            android:text="Kumar"
+            android:layout_width="192dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnUser09"
+            tools:background="@android:color/holo_blue_light"
+            android:background="@android:color/holo_blue_light"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/btnUser10" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
 </android.support.constraint.ConstraintLayout>
